--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modern Portfolio</title>
+    <title>Dilshan's Portfolio</title>
     <meta name="description" content="A modern, responsive portfolio website showcasing creative work and skills" />
     <meta name="author" content="Portfolio" />
     <meta property="og:image" content="/og-image.png" />
